page profil user en cours, une erreur à verifier dans le UserController

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,8 +24,8 @@ security:
             logout:
                 path: app_logout
                 # where to redirect after logout
-                target: app_home
-            
+                target: /login?logout=1
+            user_checker: App\Security\UserChecker
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
