travail sur le css en cours

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -8,7 +8,7 @@ twig:
                 code_postal: "85440"
                 ville: "TALMONT-SAINT-HILAIRE"
                 telephone: " 07 80 62 43 55"
-                email: "alinedo@live.fr"
+                email: "sci.theresiere@outlook.fr"
 
 when@test:
     twig:
