correction pour l'inscription et mises à jour navbar.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,7 +24,7 @@ security:
             logout:
                 path: app_logout
                 # where to redirect after logout
-                target: /login?logout=1
+                target: app_home
             user_checker: App\Security\UserChecker
 
             # activate different ways to authenticate
